tests/NormalTests/paczka1/small_fuzzy/39593764.err
Error in line 6: 29FBysW A176 0,8
Error in line 4: S712 S712 92,3
